<resources>
    <string name="app_name">Roda Impian Retro 2022</string>
    <string name="kirim">Kirim</string>
    <string name="ciptapermainan">Cipta Bilik</string>
    <string name="lihatbilik">Lihat Bilik</string>
    <string name="delete">Padam</string>
    <string name="reply">Balas</string>
    <string name="replyto">membalas mesej</string>
    <string name="replying">membalas mesej</string>
    <string name="waitingoppnent">Menunggu Lawan</string>
    <string name="waitingguest">Menunggu Penyertaan</string>
    <string name="join">sertai</string>
    <string name="emptyslot">Slot Kosong</string>

    <string name="start">Mula</string>
    <string name="host">Hos: </string>
    <string name="waitinghos">Menunggu hos memulakan permainan</string>
    <string name="cancel">Keluar</string>
    <string name="p1imagepath">p1.jpeg</string>
    <string name="p2imagepath">p2.jpeg</string>
    <string name="p3imagepath">p3.jpeg</string>
    <string name="facebook_app_id">196914625759446</string>
    <string name="fb_login_protocol_scheme">fb196914625759446</string>
    <string name="mopub_inter">cbca24dfe6404ad6a136a5b093180980</string>
    <string name="mopubbanner">708ea2638b89457c8d9e84da8f9061fa</string>
    <string name="bilik">"Bilik "</string>
    <string name="chat">Chat</string>
    <string name="app_ads_id">ca-app-pub-1637458225245574~8553588969</string>
    <string name="google_inter_id">ca-app-pub-1637458225245574/3301262286</string>
    <string name="google_rewarded_id">ca-app-pub-1637458225245574/3739460180</string>
    <string name="fb_inter_ads">986438558802383_986440272135545</string>
    <string name ="fb_rewarded_ads">986438558802383_1015904462522459</string>
    <string name="mopub_rewarded">667a0fed066041a3a3a0f78872cdcfb5</string>
<string name="facebook_banner">986438558802383_1015952322517673</string>
    <string name="invite">Ajak</string>
    <string name="maxinter">588557c653181866</string>
    <string name="maxrewarded">9b1cbef884ff6b0f</string>
    <string name="google_banner">ca-app-pub-1637458225245574/7699264147</string>

</resources>