<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/square">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="room title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/room_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hostPlayer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_title">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="5dp"
            android:id="@+id/hostplayer_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/default_avatar"
            app:civ_border_overlay="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hostplayer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Host Player Name"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/hostplayer_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hostplayer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waitingoppnent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hostplayer_img"
            app:layout_constraintTop_toBottomOf="@id/hostplayer_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hostPlayer_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/playerone_img"
            android:layout_margin="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/default_avatar"
            app:civ_border_overlay="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/emptyslot"
            app:layout_constraintStart_toEndOf="@id/playerone_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerone_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waitingguest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/playerone_img"
            app:layout_constraintTop_toBottomOf="@id/playerone_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playertwo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerone_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/playertwo_img"
            android:layout_margin="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/default_avatar"
            app:civ_border_overlay="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playertwo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/emptyslot"
            app:layout_constraintStart_toEndOf="@id/playertwo_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playertwo_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waitingguest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/playertwo_img"
            app:layout_constraintTop_toBottomOf="@id/playertwo_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playertwo_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/host_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@id/room_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="10dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginRight="5dp"
            android:id="@+id/room_delete"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintStart_toEndOf="@id/room_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="10dp"
            android:layout_marginLeft="5dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:visibility="gone"
            android:id="@+id/room_start"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playertwo_layout"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="10dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:id="@+id/room_out"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playertwo_layout"
        android:text="@string/join"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="10dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:id="@+id/room_join"/>
</androidx.constraintlayout.widget.ConstraintLayout>