<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/CornflowerBlue"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Komuniti Online Roda Impian 2022"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bilOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/Green"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/ciptaBtn"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/bilOnline" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/chatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/chatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <Button
            android:id="@+id/kirimBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kirim"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/ciptaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@id/chatLayout"
            app:layout_constraintEnd_toStartOf="@id/lihatBtn"
            android:text="@string/ciptapermainan" />

        <Button
            android:id="@+id/lihatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chatLayout"
            android:text="@string/lihatbilik" />

</androidx.constraintlayout.widget.ConstraintLayout>